--- a/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
+++ b/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
@@ -11,7 +11,7 @@ spec:
   ports:
     - name: api
       protocol: TCP
-      port: 8080
+      port: 8081
 
 ---
 kind: Deployment
@@ -39,13 +39,13 @@ spec:
           image: gronnbeck/vegetaserver
           env:
           - name: TARGET_URL
-            value: http://helloworldserver.my-namespace.svc.cluster.local
+            value: http://helloworldserver.default.svc.cluster.local:8080
           ports:
             - name: api
-              containerPort: 8080
+              containerPort: 8081
           readinessProbe:
             httpGet:
               path: /
-              port: 8080
+              port: 8081
             initialDelaySeconds: 20
             timeoutSeconds: 2
