--- a/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
+++ b/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
@@ -47,6 +47,8 @@ spec:
           env:
           - name: TARGET_URL
             value: http://helloworldserver.default.svc.cluster.local:8080
+          - name: ATTACK_RATE
+            value: 1000
           ports:
             - name: api
               containerPort: 8081
