--- a/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
+++ b/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
@@ -48,7 +48,7 @@ spec:
           - name: TARGET_URL
             value: http://helloworldserver.default.svc.cluster.local:8080
           - name: ATTACK_RATE
-            value: 1000
+            value: "1000"
           ports:
             - name: api
               containerPort: 8081
