--- a/high-performance-api-on-kubernetes/02-the-naive/naive/kube.yaml
+++ b/high-performance-api-on-kubernetes/02-the-naive/naive/kube.yaml
@@ -2,11 +2,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: naive
+  name: redis-api
 spec:
   selector:
-    name: naive
-    app: naive
+    name: redis-api
+    app: redis-api
     tier: api
   ports:
     - name: api
@@ -17,24 +17,24 @@ spec:
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: naive
+  name: redis-api
   labels:
-      name: naive
-      app: naive
+      name: redis-api
+      app: redis-api
       tier: api
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: naive
-        app: naive
+        name: redis-api
+        app: redis-api
         tier: api
     spec:
       nodeSelector:
         cloud.google.com/gke-nodepool: default-pool
       containers:
-        - name: naive
+        - name: redis-api
           imagePullPolicy: Always
           image: gronnbeck/redis-api:naive
           resources:
