Update updater with correct url

--- a/high-performance-api-on-kubernetes/02-the-naive/updater/kube.yaml
+++ b/high-performance-api-on-kubernetes/02-the-naive/updater/kube.yaml
@@ -27,4 +27,4 @@ spec:
               memory: 250Mi
           env:
           - name: API_URL
-            value: http://naive.default.svc.cluster.local:8080
+            value: http://redis-api.default.svc.cluster.local:8080
