--- a/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
+++ b/high-performance-api-on-kubernetes/01-the-tools/vegetaserver/kube-helloworld.yaml
@@ -42,7 +42,7 @@ spec:
               cpu: 2
               memory: 1024Mi
             requests:
-              cpu: 1
+              cpu: 400m
               memory: 500Mi
           env:
           - name: TARGET_URL
